Fix overflow issue with containers

--- a/src/components/ListingDetails/listingDetails.css
+++ b/src/components/ListingDetails/listingDetails.css
@@ -3,4 +3,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    width: 100%;
+    overflow: auto;
 }
